objects/Contract_Pricing_Terms__c.object
<CustomObject>
    <fields>
        <fullName>Account_Level__c</fullName>
        <formula>if((Contract__r.Account.ParentId!=null &amp;&amp; Contract__r.Account.Parent.ParentId!=null &amp;&amp; Contract__r.Account.Parent.Parent.ParentId!=null),
&apos;Child&apos;,
if((Contract__r.Account.ParentId!=null &amp;&amp; Contract__r.Account.Parent.ParentId!=null &amp;&amp; Contract__r.Account.Parent.Parent.ParentId==null) ,
&apos;Parent&apos;,
if((Contract__r.Account.ParentId!=null &amp;&amp; Contract__r.Account.Parent.ParentId==null),
&apos;Grand Parent&apos;,
if((Contract__r.Account.ParentId==null),
&apos;Great Grand Parent&apos;,
&apos;Standalone&apos;))))</formula>
        <label>Account Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_requirements_for_deleted_or_disco__c</fullName>
        <label>What Add&apos;l action taken on disc&apos;d sku</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>None/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Replace with OD Alternate (when possible)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Addition_communication_requirements__c</fullName>
        <label>Addition communication requirements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Notification only</fullName>
                </value>
                <value>
                    <fullName>Notification and customer approval</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_DISCO_action__c</fullName>
        <label>Additional DISCO action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
                <value>
                    <fullName>Replace with OD alternate (when possible)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternate_restrictions__c</fullName>
        <label>Alternate restrictions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
                <value>
                    <fullName>Equal or lesser price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_obligated_to_pass_on_cost_decreases__c</fullName>
        <label>Are obligated to pass on cost decreases?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Initial_Freeze_Period_in_days__c</fullName>
        <inlineHelpText>If contract silent, enter 0. For one quarter enter 90. For 6 months enter 180. For one year enter 365. For two years enter 730. Etc</inlineHelpText>
        <label>Initial Price Freeze Period (in days)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Prc_Chg_Notice_Reqd_days__c</fullName>
        <inlineHelpText>If contract silent, enter 0</inlineHelpText>
        <label>CC Price Change Notice Req&apos;d (in days)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Price_Incr_Cap_Pegd2To__c</fullName>
        <description>What is the second value that the cap is pegged to?</description>
        <inlineHelpText>CC Price Increase Cap Pegged To</inlineHelpText>
        <label>What is the 2nd value that the cap peg?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Static Amount</fullName>
                </value>
                <value>
                    <fullName>Consumer Price Index (CPI)</fullName>
                </value>
                <value>
                    <fullName>Producer Price Index (PPI)</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Web price</fullName>
                </value>
                <value>
                    <fullName>Operating cost</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Price_Incr_Cap_Pegd_To__c</fullName>
        <description>CC Price Increase Cap Pegged To</description>
        <inlineHelpText>CC Price Increase Cap Pegged To</inlineHelpText>
        <label>What is the price increase cap pegged to</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Static Amount</fullName>
                </value>
                <value>
                    <fullName>Consumer Price Index (CPI)</fullName>
                </value>
                <value>
                    <fullName>Producer Price Index (PPI)</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Web price</fullName>
                </value>
                <value>
                    <fullName>Operating cost</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Price_Incr_Capped__c</fullName>
        <description>Are CC Price Increases Capped?</description>
        <inlineHelpText>Are CC Price Increases Capped?</inlineHelpText>
        <label>Are price increases capped?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Pricing_Update_Frequency_in_days__c</fullName>
        <inlineHelpText>If contract silent, enter 0</inlineHelpText>
        <label>How frequently can we pass increases</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPI_Price_Incr_Pegd2To__c</fullName>
        <description>Which Consumer Price Index are price increases pegged to?</description>
        <inlineHelpText>Which Consumer Price Index are price increases pegged to?</inlineHelpText>
        <label>Which Consumer Price Index are price2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting information</fullName>
                    <default>true</default>
                    <label>Awaiting information</label>
                </value>
                <value>
                    <fullName>All Items Consumer Price Index for All Urban Consumers (CPI-U)</fullName>
                </value>
                <value>
                    <fullName>Consumer Price Index for Urban Wage Earners and Clerical Workers (CPI-W)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPI_Price_Incr_Pegd_To__c</fullName>
        <description>CPI Price Increases Are Pegged To</description>
        <inlineHelpText>CPI Price Increases Are Pegged To</inlineHelpText>
        <label>CPI Price Increases Are Pegged To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting information</fullName>
                    <default>true</default>
                    <label>Awaiting information</label>
                </value>
                <value>
                    <fullName>All Items Consumer Price Index for All Urban Consumers (CPI-U)</fullName>
                </value>
                <value>
                    <fullName>Consumer Price Index for Urban Wage Earners and Clerical Workers (CPI-W)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPTPush__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPTPush</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calendar_period__c</fullName>
        <label>Calendar period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Specific date</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comm_Req_CC_Price_Chg__c</fullName>
        <inlineHelpText>If contract silent, enter 0</inlineHelpText>
        <label>Communication Req&apos;d For CC Price Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Notification only</fullName>
                </value>
                <value>
                    <fullName>Notification and customer approval</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complex_cap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complex cap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>Contract_Pricing_Terms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DISCO_communication_requirements__c</fullName>
        <label>DISCO communication requirements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
                <value>
                    <fullName>Standard BSD terms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_1__c</fullName>
        <label>Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_2__c</fullName>
        <label>Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_3__c</fullName>
        <label>Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deletion_communication_requirements__c</fullName>
        <label>Deletion communication requirements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Notification only</fullName>
                </value>
                <value>
                    <fullName>Notification and customer approval</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department_Groups__c</fullName>
        <description>Logical grouping of Departments</description>
        <inlineHelpText>Select Department Groups for this Pricing Term</inlineHelpText>
        <label>Department Groups</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select All</fullName>
                </value>
                <value>
                    <fullName>All Except Paper &amp; Toner</fullName>
                </value>
                <value>
                    <fullName>CBS</fullName>
                </value>
                <value>
                    <fullName>CPD</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
                <value>
                    <fullName>Ink &amp; Toner</fullName>
                </value>
                <value>
                    <fullName>MPS</fullName>
                </value>
                <value>
                    <fullName>Office Supplies</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
                <value>
                    <fullName>School Supplies</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Technology (Tech Depot)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Departments__c</fullName>
        <description>List of Departments</description>
        <inlineHelpText>List of Departments for Pricing Term</inlineHelpText>
        <label>Departments</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>01 - FURNITURE</fullName>
                </value>
                <value>
                    <fullName>03 - BINDERS</fullName>
                </value>
                <value>
                    <fullName>04 - DATED AND FORMS</fullName>
                </value>
                <value>
                    <fullName>05 - PAPER</fullName>
                </value>
                <value>
                    <fullName>06 - MAILROOM/SHIPPING</fullName>
                </value>
                <value>
                    <fullName>07 - SCHOOL SUPPLIES</fullName>
                </value>
                <value>
                    <fullName>08 - LIGHTING</fullName>
                </value>
                <value>
                    <fullName>09 - PC ACCESSORIES</fullName>
                </value>
                <value>
                    <fullName>10 - DESKTOP COMPUTERS</fullName>
                </value>
                <value>
                    <fullName>11 - WRITING</fullName>
                </value>
                <value>
                    <fullName>12 - SPECIALTY PAPER</fullName>
                </value>
                <value>
                    <fullName>13 - NOTETAKING</fullName>
                </value>
                <value>
                    <fullName>14 - INKJET CARTRIDGES</fullName>
                </value>
                <value>
                    <fullName>16 - PRINTERS</fullName>
                </value>
                <value>
                    <fullName>17 - BUSINESS COMMUNICATION</fullName>
                </value>
                <value>
                    <fullName>18 - SHRED/STORE SERVICES</fullName>
                </value>
                <value>
                    <fullName>19 - MOBILITY</fullName>
                </value>
                <value>
                    <fullName>20 - PERFORMANCE PP SRVC</fullName>
                </value>
                <value>
                    <fullName>21 - FLASH STORAGE</fullName>
                </value>
                <value>
                    <fullName>22 - MARKETING SERVICES</fullName>
                </value>
                <value>
                    <fullName>23 - SAFETY, SECURITY, AND MEDICAL</fullName>
                </value>
                <value>
                    <fullName>24 - OFFICE ACCESSORIES</fullName>
                </value>
                <value>
                    <fullName>25 - SEATING</fullName>
                </value>
                <value>
                    <fullName>26 - SEASONAL PRODUCTS</fullName>
                </value>
                <value>
                    <fullName>27 - SHREDDERS</fullName>
                </value>
                <value>
                    <fullName>28 - FILING</fullName>
                </value>
                <value>
                    <fullName>29 - CUSTOM OUTSOURC PRNT</fullName>
                </value>
                <value>
                    <fullName>30 - DELIVERY CHARGES</fullName>
                </value>
                <value>
                    <fullName>31 - K-12</fullName>
                </value>
                <value>
                    <fullName>32 - CUSTOM IN HOUSE PRNT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Detail_of_PPI_index_structure_indicated2__c</fullName>
        <label>Detail of PPI index structure indicated</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail_of_PPI_index_structure_indicated__c</fullName>
        <label>Detail of PPI index structure indicated</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date_of_this_language__c</fullName>
        <label>Effective Date of this language</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>How_frequently_can_we_pass_increases__c</fullName>
        <label>How frequently can we pass increases?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Numeric</fullName>
                </value>
                <value>
                    <fullName>Calendar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_frequently_must_we_pass_decreases__c</fullName>
        <label>How frequently must we pass decreases?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
                <value>
                    <fullName>Immediately</fullName>
                </value>
                <value>
                    <fullName>Same as increases</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_Own_Account__c</fullName>
        <formula>IF(Contract__r.Account.OwnerId == $User.Id, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>I Own Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_days__c</fullName>
        <label>In days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Index_name_s__c</fullName>
        <label>Index name(s)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_notification_required_to_delete_a_cus__c</fullName>
        <label>Cust Notification Req&apos;d for Disc&apos;d sku</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>None/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Notification and customer approval</fullName>
                </value>
                <value>
                    <fullName>Notification only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_price_cap_tied_to_an_index__c</fullName>
        <label>Is price cap tied to an index?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_language_stating_thatapplicable__c</fullName>
        <label>Is there language stating thatapplicable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_standard_terms__c</fullName>
        <label>Non standard terms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proprietary terms</fullName>
                </value>
                <value>
                    <fullName>Stationary terms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notification_process_for_disco_items__c</fullName>
        <label>Notification process for disco items</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>No/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notification_time_disco_items_Other__c</fullName>
        <label>Discontinued Product Notification Langua</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_calendar_period__c</fullName>
        <label>Other calendar period</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_cap_basis__c</fullName>
        <label>Other cap basis</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Incr_Cap_Amt__c</fullName>
        <description>Price Increase Cap Amount</description>
        <inlineHelpText>If contract silent, enter 0</inlineHelpText>
        <label>Price Increase Cap Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Incr_Cap_App_Level__c</fullName>
        <description>Price Increase Cap Application Level</description>
        <inlineHelpText>Is the cap applied to each SKU individually, or as an average across multiple SKUs?</inlineHelpText>
        <label>Price Increase Cap Application Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discreet SKU</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Aggregate of SKUs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Incr_Cap_App_Scope__c</fullName>
        <description>Price Increase Cap Application Scope</description>
        <inlineHelpText>Where does the cap apply?</inlineHelpText>
        <label>Price Increase Cap Application Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Information</fullName>
                    <default>true</default>
                    <label>Awaiting Information</label>
                </value>
                <value>
                    <fullName>None/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>All Custom Cores</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Incr_Cap_Calc_Scope__c</fullName>
        <description>Price Increase Cap Calculation Scope</description>
        <inlineHelpText>When calculating compliance to the cap terms, what is the scope of the SKUs that must be considered?</inlineHelpText>
        <label>Price Increase Cap Calculation Scope</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Price_Incr_Cap_App_Level__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Information</fullName>
                    <default>true</default>
                    <label>Awaiting Information</label>
                </value>
                <value>
                    <fullName>None/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>SKU Price</fullName>
                </value>
                <value>
                    <fullName>SKU Total Spend</fullName>
                </value>
                <value>
                    <fullName>Core Spend</fullName>
                </value>
                <value>
                    <fullName>Customer Spend</fullName>
                </value>
                <value>
                    <fullName>Category Spend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Incr_Cap_Period__c</fullName>
        <description>Price Increase Cap Period</description>
        <inlineHelpText>What time horizon is the cap compliance evaluated on? (ex: &quot;increase should not exceed 5% annually&quot; would be annual; &quot;increase should not exceed 5% over 6 months&quot; = semi-annual)</inlineHelpText>
        <label>Price Increase Cap Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Needs Validation</fullName>
                    <default>true</default>
                    <label>Needs Validation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Incr_Cap_Type_Unit__c</fullName>
        <description>Price Increase Cap Type/Units</description>
        <inlineHelpText>Is the cap amount a percent or a dollar amount?</inlineHelpText>
        <label>Price Increase Cap Type/Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Increase_Cap_2_Type_Units__c</fullName>
        <label>Price Increase Second Cap Type/Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Information</fullName>
                </value>
                <value>
                    <fullName>$</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Increase_Cap_Amount_2__c</fullName>
        <label>Price Increase Second Cap Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_cap_language__c</fullName>
        <label>Price cap language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price_requirements_for_added_or_alternat__c</fullName>
        <label>Price requirements for added or alternat</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>None/Contract Silent</fullName>
                </value>
                <value>
                    <fullName>Equal or Lesser Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>